# MiniGIS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRASH_FIX_REPORT.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0.md  UNRELEASED.md  create_release.bat  index.html  package-lock.json  package.json  release_notes.md  splash.html  tailwind.config.js  tauri-dev.ps1  tsconfig.json  vite.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  crash_report.md  feature_request.md
docs/: BASEMAP_MEMORY_FIX.md  CGCS2000_EPSG_FIX.md  CHANGELOG_CRS.md  CONTRIBUTING_GUIDE.md  CRASH_FIX_SUMMARY.md  CRASH_TROUBLESHOOTING.md  CRS_EXAMPLES.md  CRS_FEATURE.md  CRS_LIMITATIONS.md  CRS_QUICKSTART.md  CRS_REFACTOR.md  CRS_UPDATE_SUMMARY.md  DEVELOPMENT.md  DYNAMIC_PROJECTION.md  GDAL_SETUP.md  GDB_SUPPORT.md  MAP_TABS_FEATURE.md  README.md  RELEASE_PROCESS.md  SESSION_RESTORE.md  SESSION_RESTORE_TEST.md  SPLASH_SCREEN.md  USER_GUIDE.md
docs/releases/: RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_WORKFLOW.md
scripts/: README.md  check_gdal_env.ps1  create_release.ps1  diagnose_crash.ps1  release.bat
src/: App.css  App.tsx  index.css  main.js  main.tsx  ribbon.css  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  fs-all.json
src-tauri/gdal-data/: GDAL-targets-debug.cmake  GDAL-targets-release.cmake  GDAL-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
src-tauri/icons/: README.md  icon.icns
src-tauri/proj-data/: proj-config-version.cmake  proj-targets-debug.cmake  proj-targets.cmake  proj4-targets-debug.cmake  proj4-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs  shapefile_handler.rs
src-tauri/src/commands/: file.rs  fs.rs  gdal.rs  layer.rs  mod.rs  project.rs  window.rs
src-tauri/src/gis/: gdal_init.rs  geometry.rs  mod.rs  projection.rs
src-tauri/src/services/: gdal_service.rs  layer_service.rs  mod.rs  project_service.rs
src/hooks/: useCRSProjection.ts  useRestoreSession.ts
src/modules/: attributeViewer.js  layerManager.js  mapManager.js  sessionManager.js  (+1 more)
(+53 files in other folders)
