[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["MiniGIS Team"]
license = "MIT"
repository = "https://github.com/xiaofuX1/MiniGIS"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
